Ticket #1051 (closed defect: fixed)

Opened 2 years ago

Last modified 2 years ago

telnet never exits

Reported by: courmisch Assigned to: courmisch
Priority: normal Milestone: 0.9.0 bugs
Component: Network Version: master
Severity: normal Keywords:
Cc: Platform(s): all
Difficulty: unknown Work status: Not started

Description

Telnet interface prevent VLC from stopping.

Change History

11/02/07 18:22:21 changed by courmisch

  • status changed from new to closed.
  • resolution set to fixed.

(In [18795]) Put accept'd socket into non-blocking mode as the others Fixes #1051

11/02/07 18:25:56 changed by courmisch

  • status changed from closed to reopened.
  • resolution deleted.

11/02/07 18:40:46 changed by courmisch

  • status changed from reopened to new.
  • owner set to courmisch.

11/02/07 18:40:56 changed by courmisch

  • status changed from new to assigned.
  • component changed from VLM to Network.

11/02/07 18:41:05 changed by courmisch

  • status changed from assigned to closed.
  • resolution set to fixed.

(In [18796]) Really put socket into non-blocking mode Really fixes #1051